--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "railway-pg-s3-backup",
-  "version": "0.0.1",
-  "description": "A simple Node app to backup PostgreSQL databases to an S3 bucket",
-  "main": "dist/index.js",
-  "type": "module",
+  "name": "railway-postgres-s3-backups",
+  "version": "1.0.0",
+  "description": "Automated PostgreSQL backups to S3",
+  "main": "dist/doit.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "ts-node src/doit.ts",
     "build": "tsc"
   },
   "author": "Faraz Patankar",
   "license": "MIT",
   "devDependencies": {
-    "@types/cron": "^2.0.1",
-    "@types/node": "^20.12.4",
-    "typescript": "^5.4.4"
+    "@types/node": "^18.0.0",
+    "@types/node-cron": "^3.0.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.549.0",
-    "@aws-sdk/lib-storage": "^3.549.0",
-    "cron": "^3.1.6",
-    "envsafe": "^2.0.3",
-    "filesize": "^10.1.1"
+    "@aws-sdk/client-s3": "^3.0.0",
+    "dotenv": "^16.0.0",
+    "node-cron": "^3.0.2"
   },
   "keywords": []
 }
